<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.bluenodes.bluenodescontroller.MetadataFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_accessAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/accessAddress" />

        <EditText
            android:id="@+id/accessAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_accessAddress"
            android:background="@android:drawable/editbox_background"
            android:digits="0123456789ABCDEF"
            android:inputType="none"
            android:maxLength="8" />

        <TextView
            android:id="@+id/text_view_advertisementInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/accessAddress"
            android:text="@string/advertisementInterval" />

        <EditText
            android:id="@+id/advertisementInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_advertisementInterval"
            android:background="@android:drawable/editbox_background"
            android:inputType="none" />

        <TextView
            android:id="@+id/text_view_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/advertisementInterval"
            android:text="@string/channel" />

        <EditText
            android:id="@+id/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_channel"
            android:background="@android:drawable/editbox_background"
            android:inputType="none" />

        <TextView
            android:id="@+id/text_view_deviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/channel"
            android:text="@string/deviceAddress" />

        <EditText
            android:id="@+id/deviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_deviceAddress"
            android:background="@android:drawable/editbox_background"
            android:digits="0123456789ABCDEF"
            android:inputType="none"
            android:maxLength="20" />
    </RelativeLayout>
</FrameLayout>
